<resources>

    <!--Maps, Directions, and Places-->
    <string name="google_maps_api_key">AIzaSyAi9_RRiwiwsIMzGs99KVEHSaueKQp_Z4k</string>

    <string name="app_name">Atheneum</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_complete_registration">Complete Registration</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Firebase table names-->
    <string name="db_users">users</string>
    <string name="db_ownerCollection">ownerCollection</string>
    <string name="db_requestCollection">requestCollection</string>
    <string name="db_book_isbn">isbn</string>
    <string name="db_book_title">title</string>
    <string name="db_book_description">description</string>
    <string name="db_book_author">author</string>
    <string name="db_book_owner">owner</string>
    <string name="db_book_borrower">borrower</string>
    <string name="db_book_status">status</string>
    <string name="db_book_requests">requests</string>
    <string name="db_book_bookID">bookID</string>
    <string name="db_book_bookID_leastSigBits">leastSignificantBits</string>
    <string name="db_book_bookID_mostSigBits">mostSignificantBits</string>
    <string name="db_book_photos">photos</string>
    <string name="db_book_requester">requester</string>
    <string name="db_book_request_status">rStatus</string>
    <!--End of Firebase table names-->

    <!-- Strings related to login -->
    <string name="sign_in_cancelled">Canceled Sign-in!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="no_user_signed_in">No user signed in!</string>
    <!-- End of Strings related to login -->

    <!-- Strings for notifications page -->
    <string name="title_activity_notifications">Notifications</string>
    <!-- End of Strings for notifications page -->

    <!--Strings for profile page-->
    <string name="profile_title">Profile</string>
    <string name="title_activity_view_profile">View Profile</string>
    <!--End of Strings for profile page-->

    <!--Strings for edit profile-->
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="prompt_email">E-mail</string>
    <string name="user_email_prompt">E-mail</string>
    <string name="prompt_user_phone">Phone Number</string>
    <string name="user_profile_picture_prompt">Profile Picture (click image to change)</string>
    <string name="sensitive_operation_snackbar_message">Changing your email is a sensitive operation and you have been logged in too long! Please re-login and try again!</string>
    <string name="unknown_error_snackbar_message">Unknown error! Please try again!</string>
    <string name="lost_connection_snackbar_message">Can\'t change email while connection is lost! Re-connect and try again!</string>
    <!--End of Strings for edit profile-->

    <!-- Strings for adding/editing books -->
    <string name="add_book_prompt">Add a Book</string>
    <string name="edit_book_prompt">Edit Book</string>
    <string name="bookisbn_prompt">ISBN</string>
    <string name="populateFromIsbnBtnText">Auto-Populate From ISBN</string>
    <string name="booktitle_prompt">Title</string>
    <string name="bookdesc_prompt">Description</string>
    <string name="bookauthor_prompt">Author</string>

    <string name="action_save">Save</string>
    <string name="scanBtnPrompt">Scan</string>

    <string name="activity_title_add_book">Add Book</string>
    <string name="activity_title_edit_book">Edit Book</string>
    <!-- End of Strings for adding/editing books -->

    <!--Strings for book information-->
    <string name="activity_book_info">Book Information</string>
    <!--End of Strings for book information-->

    <!--Strings for owner page-->
    <string name="owner_page_title">Owner Page</string>
    <string-array name="ownBookSpinnerArray">
        <item>ALL</item>
        <item>AVAILABLE</item>
        <item>REQUESTED</item>
        <item>ACCEPTED</item>
        <item>BORROWED</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--End of Strings for owner page-->

    <!--Strings for borrower page-->
    <string name="borrower_page_title">Borrower Page</string>
    <string name="save">Save</string>
    <string name="borrowed">Borrowed</string>
    <string name="requests">Requests</string>
    <string name="accepted">Accepted</string>
    <string name="title_activity_book_info">BookInfoActivity</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="NewRequestActivity">New Request</string>
    <string name="RequestInfo">Request Info</string>
    <string name="AvailableBookInfo">Available Book Info</string>
    <string-array name="requestSpinnerArray">
        <item>ALL</item>
        <item>PENDING</item>
        <item>ACCEPTED</item>
        <item>DECLINED</item>
    </string-array>
    <!--End of Strings for borrower page-->


    <!--Strings for search page-->
    <string name="search_page_title">Search</string>
    <string name="title_activity_scan_barcode">ScanBarcodeActivity</string>
    <!--End of Strings for search page-->

    <!--Strings for Add/edit/delete book tests-->
    <string name="newbooktest_title">Testbook</string>
    <string name="newbooktest_author">logintester</string>
    <string name="newbooktest_isbn">1234567890987</string>
    <string name="newbooktest_desc">Lorem ipsum dolor sit amet</string>
    <string name="editbooktest_newtitle">New Title</string>
    <string name="editbooktest_newdesc">Some different text here</string>
    <string name="title_activity_map">MapActivity</string>
    <!--End of Strings for Add/edit/delete book tests-->

    <!--Strings for ViewEditBookPhotosActivity-->
    <!--<string name="title_activity_view_edit_book_photos">View Book Photos</string>-->
    <string name="activity_title_view_book_photos">View Book Photos</string>
    <string name="activity_title_edit_book_photos">Edit Book Photos</string>
    <string name="book_photo_dialog_delete_prompt">Are you sure you want to delete this photo?</string>
    <string name="book_photo_dialog_edit_prompt">Are you sure you want to edit this photo?</string>
    <!--End of Strings for ViewEditBookPhotosActivity-->

    <!--Strings for BookInfoActivity-->
    <string name="delete_book_dialog_prompt">Are you sure you want to delete this book?</string>
    <!--End of Strings for BookInfoActivity-->

    <!--Strings for Generic Dialog Actions-->
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_cancel">Cancel</string>
    <!--End of Strings for Generic Dialog Actions-->

    <!--Goodreds API Key-->
    <string name="GoodreadsAPI">6HCjeCCd22d7FunOF3vcA</string>
    <string name="title_activity_borrower">BorrowerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Stings for RecommendedBooksActivity-->
    <string name="title_activity_recommended_books">Recommended Books</string>
    <!--End of Strings for RecommendedBooksActivity-->

    <!--Strings for HomePageFragment-->
    <string name="popular_books_recommendations_prompt">Popular with Other Users: </string>
    <!--End of Strings for HomePageFragment-->

</resources>
