<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingRight="8sp"
                android:text="BOOK NAME HERE"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AUTHOR NAME HERE"
                android:textSize="16sp"
                android:textStyle="italic" />



        </LinearLayout>

        <TextView
            android:id="@+id/book_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="STATUS HERE" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/book_borrower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borrower : "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bookcard_borrowername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BORROWERNAME"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>